[gd_scene load_steps=37 format=3 uid="uid://c3ca3y756elru"]

[ext_resource type="Script" uid="uid://1qajh1myuq0p" path="res://entities/boss2/boss_2.gd" id="1_xjvva"]
[ext_resource type="Script" uid="uid://b065nnpdo37wl" path="res://entities/boss2/stateStuff/boss2StateMachine.gd" id="2_xjvva"]
[ext_resource type="Script" uid="uid://df7jtkhbvsj05" path="res://entities/boss2/stateStuff/startCutsceneB2.gd" id="3_c11q8"]
[ext_resource type="Script" uid="uid://dcjaynvqwj75n" path="res://entities/boss2/stateStuff/walkB2.gd" id="3_xjvva"]
[ext_resource type="PackedScene" uid="uid://c457ehqfb1g6c" path="res://Components/Hurtbox/hurtbox_component.tscn" id="4_xdast"]
[ext_resource type="Script" uid="uid://p2k4vkvetpr8" path="res://entities/boss2/stateStuff/swordThrustB2.gd" id="5_aubgl"]
[ext_resource type="PackedScene" uid="uid://bghmfsudxxrio" path="res://Components/Health/health_component.tscn" id="5_okui4"]
[ext_resource type="Shader" uid="uid://cne6u584nd6e4" path="res://shaders/hitFlash.gdshader" id="6_3k44g"]
[ext_resource type="Script" uid="uid://2te5vwky0b04" path="res://entities/boss2/stateStuff/daggerThrowB2.gd" id="6_t1hgp"]
[ext_resource type="Script" uid="uid://dhj0beogdxjrc" path="res://entities/boss2/stateStuff/jumpDaggerThrowB2.gd" id="7_a7amn"]
[ext_resource type="Texture2D" uid="uid://bytf2opdnr8js" path="res://icon.svg" id="7_tyv83"]
[ext_resource type="Script" uid="uid://d2imdeynqwkk4" path="res://entities/boss2/stateStuff/slashLineB2.gd" id="8_u6bf7"]
[ext_resource type="PackedScene" uid="uid://bedusyx1egfn0" path="res://Components/Hitbox/hitbox_component.tscn" id="8_whq5p"]
[ext_resource type="Script" uid="uid://ywjx5o1h3e5r" path="res://entities/boss2/stateStuff/deathB2.gd" id="9_fh05x"]
[ext_resource type="PackedScene" uid="uid://dpfgqwsylvrr2" path="res://juices/boss_bar/boss_health_bar.tscn" id="15_hbd6o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ga3re"]
size = Vector2(120, 130)

[sub_resource type="Animation" id="Animation_fh05x"]
resource_name = "dagger_throw"
length = 2.0
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_spawn_dagger"
}, {
"args": [],
"method": &"_spawn_dagger"
}, {
"args": [],
"method": &"_spawn_dagger"
}]
}

[sub_resource type="Animation" id="Animation_hbd6o"]
resource_name = "jump_dagger"
length = 2.0
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_spawn_dagger"
}, {
"args": [],
"method": &"_spawn_dagger"
}, {
"args": [],
"method": &"_spawn_dagger"
}]
}

[sub_resource type="Animation" id="Animation_gwq6h"]
resource_name = "sword_thrust"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitB/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_qvnp8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitB/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rlqtg"]
resource_name = "slashies"
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_spawn_slash"
}, {
"args": [],
"method": &"_spawn_slash"
}, {
"args": [],
"method": &"_spawn_slash"
}]
}

[sub_resource type="Animation" id="Animation_gcppr"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hbd6o"]
_data = {
&"RESET": SubResource("Animation_qvnp8"),
&"dagger_throw": SubResource("Animation_fh05x"),
&"jump_dagger": SubResource("Animation_hbd6o"),
&"slashies": SubResource("Animation_rlqtg"),
&"sword_thrust": SubResource("Animation_gwq6h"),
&"walk": SubResource("Animation_gcppr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gr070"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_4evkx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../sprite:material:shader_parameter/mix_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_h8ljm"]
resource_name = "ouch"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../sprite:material:shader_parameter/mix_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4evkx"]
_data = {
&"RESET": SubResource("Animation_4evkx"),
&"ouch": SubResource("Animation_h8ljm")
}

[sub_resource type="Animation" id="Animation_hlv0q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HitboxComponent/hitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../sprite:material:shader_parameter/mix_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../sprite:material:shader_parameter/opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_yl5t8"]
resource_name = "death"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HitboxComponent/hitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../sprite:material:shader_parameter/mix_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../sprite:material:shader_parameter/opacity")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_cutscene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hlv0q"]
_data = {
&"RESET": SubResource("Animation_hlv0q"),
&"death": SubResource("Animation_yl5t8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7728"]
size = Vector2(128, 128)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l7728"]
shader = ExtResource("6_3k44g")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/mix_value = 0.0
shader_parameter/opacity = 1.0

[sub_resource type="Animation" id="Animation_hwmh2"]
length = 0.001

[sub_resource type="Animation" id="Animation_l7728"]
resource_name = "start"
length = 0.3
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwmh2"]
_data = {
&"RESET": SubResource("Animation_hwmh2"),
&"start": SubResource("Animation_l7728")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh05x"]
size = Vector2(322, 20)

[node name="boss2" type="CharacterBody2D" groups=["Boss"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_xjvva")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("debug_txt")]
unique_name_in_owner = true
script = ExtResource("2_xjvva")
debug_txt = NodePath("../Label")

[node name="start_cutscene" type="Node" parent="StateMachine"]
script = ExtResource("3_c11q8")

[node name="walk" type="Node" parent="StateMachine"]
script = ExtResource("3_xjvva")

[node name="sword_thrust" type="Node" parent="StateMachine"]
script = ExtResource("5_aubgl")

[node name="dagger_throw" type="Node" parent="StateMachine"]
script = ExtResource("6_t1hgp")

[node name="jump_dagger_throw" type="Node" parent="StateMachine"]
script = ExtResource("7_a7amn")

[node name="slash_line" type="Node" parent="StateMachine"]
script = ExtResource("8_u6bf7")

[node name="death" type="Node" parent="StateMachine" groups=["Boss"]]
script = ExtResource("9_fh05x")

[node name="Label" type="Label" parent="."]
offset_left = 78.0
offset_top = -80.0
offset_right = 126.0
offset_bottom = -62.0
text = "walk"

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ga3re")

[node name="animation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_hbd6o")
}

[node name="hurtbox_component" parent="." node_paths=PackedStringArray("health_component", "ouchnim", "deathnim") instance=ExtResource("4_xdast")]
collision_layer = 2
collision_mask = 2
health_component = NodePath("../health_component")
hitspark_scale = Vector2(4, 4)
ouchnim = NodePath("ouch")
deathnim = NodePath("death")
spawn_hitspark = true
hitspark_speed_scale = 0.8

[node name="hurtbox" type="CollisionShape2D" parent="hurtbox_component"]
shape = SubResource("RectangleShape2D_gr070")

[node name="ouch" type="AnimationPlayer" parent="hurtbox_component"]
libraries = {
&"": SubResource("AnimationLibrary_4evkx")
}

[node name="death" type="AnimationPlayer" parent="hurtbox_component"]
libraries = {
&"": SubResource("AnimationLibrary_hlv0q")
}

[node name="HitboxComponent" parent="." instance=ExtResource("8_whq5p")]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="hitbox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_l7728")
debug_color = Color(0.994449, 0, 0.221892, 0.42)

[node name="health_component" parent="." node_paths=PackedStringArray("hp_bar") instance=ExtResource("5_okui4")]
max_hp = 500.0
hp_bar = NodePath("../UIStuff/BossHealthBar2")

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_l7728")
texture = ExtResource("7_tyv83")

[node name="UIStuff" type="CanvasLayer" parent="."]

[node name="start" type="AnimationPlayer" parent="UIStuff"]
libraries = {
&"": SubResource("AnimationLibrary_hwmh2")
}
autoplay = "start"

[node name="BossHealthBar2" parent="UIStuff" instance=ExtResource("15_hbd6o")]

[node name="SwordHitB" parent="." instance=ExtResource("8_whq5p")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitB"]
shape = SubResource("RectangleShape2D_fh05x")
disabled = true
